--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "15.1.7",
+    "next-pwa": "^5.6.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.4",
     "node-appwrite": "^15.0.0",
@@ -33,13 +34,16 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "web-push": "^3.6.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
