--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#ff3d57",
   "icons": [
     {
-      "src": "/icons/196.png",
+      "src": "/icons/logo196.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/512.png",
+      "src": "/icons/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
